tests/expectations/compiler/array/array_variable_access_fail.out
Error [ECMP0376009]: This array index could not be determined at compile time.
    --> compiler-test:3:18
     |
   3 |         return a[index];
     |                  ^^^^^
